public_html/wp-content/themes/transcribathon/css/item-page.css
/* ... */
.panel-right #description-update-button {
    border: 1px solid var(--main-color);
}
#item-data-header {
    margin-top: 15px;
    padding-bottom: 16px;
    width: 100%;
    float: left;
    padding-top: 1px;
    padding-left: 8px;
}
.panel-right #item-data-header {
    margin-top: 0!important;
    padding-top: 0!important;
    margin-bottom: 19px;
    height: 14vh;
    padding-bottom: 0;
}
.panel-right .back-to-story {
    font-size: 14px;
    float: none;
    margin-left: 10px;
    bottom: 0;
    left: 0;
    padding: 0;
    background-color: unset;
    display: inline-block;
    margin-bottom: 20px;
    color: #2b2b2b;
}
.panel-right .tab-list {
    height: 90px;
    padding-top: 17px;
    padding-left: 18px;
    position: relative;
    left: -3%;
    width: 105%;
    box-shadow: 1px 7px 11px rgba(235, 235, 235, 0.4);
}
.panel-bottom .back-to-story, .data-popout .back-to-story {
    display: none;
}
#item-switch-list img {
    height: 18px;
    width: 18px;
    vertical-align: unset;
}
#item-switch-list div.active img{
    filter: brightness(0);
}
#horizontal-close.active {
    color: #000!important;
}
.panel-right #item-switch-list {
    position: relative;
}
.panel-right .location-save-btn {
    width: 100%;
    background: var(--main-color);
    padding: 0px 10px;
    letter-spacing: 0.5px;
    border: 1px solid var(--main-color);
    font-size: 14px;
    font-weight: 700;
    height: 25px;
    margin-bottom: 20px;
    margin-top: 45px;
    border-radius: 0!important;
}
.panel-right #full-view-map {
    width: 99%;
}
.loc-input-fa {
    position: absolute;
    right: 25px;
    display: inline-block;
    padding-top: 5px;
    font-size: 14px!important;
}
#tagging-tab label {
    color: var(--main-color);
    font-family: var(--h-font-family);
    font-weight: 500!important;
}
#tagging-tab {
    padding-left: 30px!important;
}
#location-section.item-page-section {
    margin-left: 0!important;
}
.mapboxgl-ctrl-geocoder--input {
    width: 100%!important;
    border: 2px solid var(--main-color)!important;
    border-radius: 0!important;
}
.panel-right #save-all-tags {
    width: -webkit-fill-available;
    width: -moz-available;
    background-color: var(--main-color);
    color: #fff;
    padding: 0px 10px;
    letter-spacing: 0.5px;
    border: 1px solid var(--main-color);
    height: 25px;
    font-size: 14px;
    font-weight: 700;
    position: fixed;
    bottom: 0px;
    cursor: pointer;
    text-align: center;
    margin-bottom: 10px;
    margin-right: 35px;
}
.panel-bottom #save-all-tags, .data-popout #save-all-tags {
    width: 100%;
    background-color: var(--main-color);
    color: #fff;
    text-align: center;
}
.tab-list {
    overflow: hidden;
    background-color: inherit;
    text-align: center;
    /*float: left;*/
    display: flex!important;
    justify-content: space-evenly;
    margin: 0;
}
.tab-list li {
    width: 20%;
    margin-left: 0!important;
    list-style-type: none;
}
.tab-list div {
    color: #2b2b2b!important;
    background-color: #fff!important;
    position: relative;
    font-size: 25px;
    -webkit-transition: 0.3s;
    transition: 0.3s;
    display: inline-block;
    cursor: pointer;
    height: unset!important;
    width: unset!important;
}
.tablinks {
    border: none;
}
.tab-i {
    display: block;
    margin: 0 auto;
}
.tab-h {
    font-size: 12px;
    color: inherit;
    margin: 2px!important;
}
#loc-tab .tab-h {
    position: relative;
    bottom: 4px;
}
.data-popout #loc-tab .tab-h {
    bottom: 0;
}
.data-popout #loc-tab {
    margin-left: 10px;
}
.tab-status {
    border-radius: 50%;
    font-size: 9px;
    position: relative;
    bottom: 1px;
    margin-right: 3px;
}
.tab-list div.active {
    color: var(--main-color)!important;
}
.tab-list span {
    font-family: var(--h-font-family);
    font-weight: 500;
    letter-spacing: 0.025em;
}
.tab-list i {
    border: none!important;
}
.view-switcher {
    height: 25px;
    padding: 0 15px;
}
.view-switcher li {
    max-height: 200px;
    width: auto;
    height: auto;
}
.panel-right .view-switcher {
    position: absolute;
    right: 0;
    top: 13px;
}
.switch-list {
    overflow: hidden;
    background-color: inherit;
    float: right;
    margin: 0;
    background-color: #fff;
}
.switch-list li {
    display: inline;
    margin-left: 0!important;
    margin: 0 3px;
}
.switch-list i {
    font-size: 18px;
    text-align: center;
    transition: 0.3s;
    position: relative;
    height: 18px;
    width: 18px;
    cursor: pointer;
}
.switch-list img {
    filter: invert(90%) sepia(0%) saturate(32%) hue-rotate(156deg) brightness(90%) contrast(87%);
}
.switch-list img:hover {
    filter:  invert(16%) sepia(1%) saturate(1052%) hue-rotate(314deg) brightness(91%) contrast(92%);
}
.switch-i {
    display: inline-block;
    height: 18.5px;
    color: #c4c4c4;
}
.switch-i:hover {
    color: #2b2b2b;
}
#item-data-content {
    height: calc(100% - 70px);
    width: 100%;
    float: left;
    padding: 0 10px 10px 20px;
}
.data-popout #item-data-content, .panel-bottom #item-data-content {
    padding: 0;
}
.tabcontent {
    overflow-x: hidden;
    overflow-y: auto;
    height: 100%!important;
    width: 100%!important;
}
.item-data-input-headline {
    color: var(--main-color)!important;
    font-size: 1.1em;
    font-weight: 600 !important;
    font-family: var(--h-font-family);
    margin: 1em 0;
}
.item-date-inner-container {
    display: inline-block;
    padding-right: 28px;
}
.item-date-input-container {
    display: inline-block;
}
.item-date-inner-container label {
    display: inline-block;
    margin-right: 10px;
    font-weight: 500;
    color: var(--main-color);
    font-family: var(--h-font-family);
}
.item-date-inner-container input {
    width: 94px;
}
.item-date-display-container {
    margin-top: 6px;
    display: inline-block;
}
.item-date-display {
    padding: 4px 8px;
    background-color: #f3f3f3;
    font-weight: bold;
}
/* ... */

